--- a/apps/telegram-bridge/docker-compose.yml
+++ b/apps/telegram-bridge/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   app_proxy:
-    image: getumbrel/umbrel-app-store:app-proxy
+    image: ghcr.io/getumbrel/umbrel-app-proxy:latest
     restart: unless-stopped
     environment:
       APP_HOST: telegram-bridge-ui
@@ -12,7 +12,6 @@ services:
       - ui
   bridge:
     image: dock.mau.fi/mautrix/telegram:latest
-    container_name: telegram-bridge
     restart: unless-stopped
     volumes:
       - ./data:/data
@@ -44,7 +43,6 @@ services:
   # Minimal static page so Umbrel can proxy a UI route
   ui:
     image: node:18-alpine
-    container_name: telegram-bridge-ui
     restart: unless-stopped
     volumes:
       - ./ui:/app:ro
